# quackflight

./: .gitignore  main.py  pyproject.toml
azure_delta/: __init__.py  config.py  discovery.py  extensions.py
